# travel_agent_langgraph

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  NEXT_SESSION.md  README.md  alembic.ini  main.py  pyproject.toml  travel_agent.db-shm  travel_agent.db-wal
app/: config.py  graph.py  logging_setup.py  state.py
app/api/: events.py  routes.py  server.py
app/calendar/: __init__.py  day_grid.py  layouts.py  models.py  month_assigner.py  orientation.py  pipeline.py  renderer.py  styles.css  validator.py
app/db/: base_repository.py  calendar_repository.py  connection.py  models.py  photobook_repository.py  repository.py
app/nodes/: clustering_image_node.py  design_blogpost.py  enrich_poi_node.py  enrich_weather_node.py  extract_metadata.py  generate_blogpost.py  generate_enriched_map.py  generate_map.py  generate_pdf.py  generate_photobook_node.py  generate_photobook_pdf_node.py  load_images.py  load_tour_notes_node.py  persist_article.py  persist_photobook.py  plan_photobook_node.py  process_gpx.py  render_photobook_node.py  review_content_node.py  save_draft.py  select_images_node.py  select_photobook_images_node.py  summarize_context_node.py
app/photobook/: generate.py  generate_pdf.py  image_selector.py  plan.py  preset_loader.py  presets.py  renderer.py  styles.css  template_loader.py  validator.py
app/pipeline/: process_images.py
app/services/: blog_generator.py  clustering_images.py  content_reviewer.py  design_blogpost.py  generate_elevation_profile.py  generate_mapimage.py  generate_pdf.py  (+13 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json
tests/: conftest.py  test_api.py  test_api_endpoints.py  test_calendar_api.py  test_calendar_repository.py  test_conftest_fixtures.py  test_db_connection.py  test_db_models.py  test_draft_persistence.py  test_events.py  test_persist_photobook_service.py  test_persist_service.py  test_photobook_presets.py  test_photobook_repository.py  test_pipeline_process_images.py  test_repository.py  test_revise_api.py  test_state.py
(+236 files in other folders)
