[project]
name = "travel-agent-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "gpxpy>=1.6.2",
    "langgraph>=1.1.6",
    "matplotlib>=3.10.8",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "selenium>=4.41.0",
]
