[project]
name = "travel-agent-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "folium>=0.20.0",
    "gpxpy>=1.6.2",
    "langgraph>=1.1.6",
    "markdown>=3.10.2",
    "matplotlib>=3.10.8",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "selenium>=4.41.0",
    "sse-starlette>=2.2.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
travel-agent-api = "app.api.server:main"

[dependency-groups]
dev = [
    "piexif>=1.0",
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
markers = [
    "unit: Fast tests with no external dependencies",
    "integration: Tests using real filesystem and fixtures, mocked network/browser",
    "e2e: Full pipeline tests requiring Ollama and Chrome",
]
